# zeronoise-stt

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test_main.py  test_smoke.py
src/: config.py  main.py
src/utils/: audio_utils.py  mqtt.py
