[project]
name = "quietstt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "librosa>=0.11.0",
    "openai-whisper>=20250625",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
]
